# tars-fl-sim

./: .gitignore  .mailmap  Colab_GPU_Optimization_Guide.md  Free_GPU_Services_Guide.md  README.md  README_Colab.md  TARS_Training_Colab.ipynb  debug_test.py  github_issues.md  main.py  main_colab_safe.py  main_gpu_optimized.py  main_kaggle_optimized.py  prd_hybrid.md  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: user_story.md
app/: simulation.py
app/attacks/: poisoning.py
app/components/: client.py  server.py
app/defense/: aggregation_rules.py  tars_agent.py
app/shared/: data_utils.py  interfaces.py  models.py
app/utils/: __init__.py  device_manager.py
scripts/: run.sh  setup.sh
